Fix overflow & Projects section  - Fix overflow in page by removing the left proprety of the nav  - Fix the project cards

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -7,7 +7,7 @@ nav {
 }
 .navbar-nav li {
   position: relative;
-  left: 40px;
+  /* left: 40px; */
 }
 .landing {
   background: #1c1a19;
@@ -121,14 +121,14 @@ nav {
 .btm-display {
   position: relative;
 }
-/* .btm-display button {
+.btm-display button {
   background-color: #ff6800;
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   border: none;
-} */
+}
 
 button {
   background-color: #ff6800;
@@ -137,7 +137,7 @@ button {
 /*who am i section*/
 .myworks {
   width: 100%;
-  height: 100%
+  height: 100%;
   height: 1300px;
   background: #1c1a19;
   background-image: url(../images/Frame.png);
